[gd_scene load_steps=10 format=2]

[ext_resource path="res://environment/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/WorldInfo.gd" type="Script" id=2]
[ext_resource path="res://ui/default-theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/options/OptionContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/World.gd" type="Script" id=5]
[ext_resource path="res://ui/pause/background.png" type="Texture" id=6]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://environment/background.png" type="Texture" id=8]
[ext_resource path="res://ui/hud/Hud.tscn" type="PackedScene" id=9]

[node name="World" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="GameWrapper" type="Node2D" parent="."]
pause_mode = 1

[node name="Background" type="Sprite" parent="GameWrapper"]
position = Vector2( -32, -384 )
scale = Vector2( 1, 1.192 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 576, 1000 )

[node name="Line2D" type="Line2D" parent="GameWrapper"]
points = PoolVector2Array( -32, 0, 544, 0 )
width = 3.0
default_color = Color( 0.4, 1, 0.607843, 1 )

[node name="WorldInfo" type="Node" parent="GameWrapper" groups=[
"world_info",
]]
script = ExtResource( 2 )

[node name="TileMap" parent="GameWrapper" instance=ExtResource( 1 )]
tile_data = PoolIntArray( 65535, 0, 0, 0, 0, 2, 11, 0, 262150, 25, 0, 0, 26, 0, 1, 27, 0, 1, 28, 0, 1, 29, 0, 1, 30, 0, 1, 31, 0, 1, 32, 0, 1, 33, 0, 2, 131071, 0, 65536, 65536, 0, 65538, 65546, 0, 3, 65547, 0, 131077, 65561, 0, 65536, 65562, 0, 65537, 65563, 0, 65537, 65564, 0, 65537, 65565, 0, 65537, 65566, 0, 65537, 65567, 0, 65537, 65568, 0, 65537, 65569, 0, 65538, 196607, 0, 65536, 131072, 0, 65538, 131081, 0, 327685, 131082, 0, 131077, 131097, 0, 65536, 131098, 0, 65537, 131099, 0, 65537, 131100, 0, 65537, 131101, 0, 65537, 131102, 0, 65537, 131103, 0, 65537, 131104, 0, 65537, 131105, 0, 65538, 262143, 0, 65536, 196608, 0, 65538, 196614, 0, 327685, 196615, 0, 131076, 196616, 0, 327687, 196633, 0, 65536, 196634, 0, 65537, 196635, 0, 65537, 196636, 0, 65537, 196637, 0, 65537, 196638, 0, 65537, 196639, 0, 65537, 196640, 0, 65537, 196641, 0, 65538, 327679, 0, 65536, 262144, 0, 65537, 262145, 0, 2, 262149, 0, 65540, 262169, 0, 65536, 262170, 0, 65537, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65537, 262174, 0, 65537, 262175, 0, 65537, 262176, 0, 65537, 262177, 0, 65538, 393215, 0, 65536, 327680, 0, 196608, 327681, 0, 131074, 327705, 0, 65536, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 327710, 0, 65537, 327711, 0, 65537, 327712, 0, 65537, 327713, 0, 65538, 458751, 0, 65536, 393216, 0, 65538, 393218, 0, 262150, 393241, 0, 65536, 393242, 0, 65537, 393243, 0, 65537, 393244, 0, 65537, 393245, 0, 65537, 393246, 0, 65537, 393247, 0, 65537, 393248, 0, 65537, 393249, 0, 65538, 524287, 0, 65536, 458752, 0, 65538, 458754, 0, 131075, 458755, 0, 327687, 458777, 0, 65536, 458778, 0, 65537, 458779, 0, 65537, 458780, 0, 65537, 458781, 0, 65537, 458782, 0, 65537, 458783, 0, 65537, 458784, 0, 65537, 458785, 0, 65538, 589823, 0, 65536, 524288, 0, 65538, 524292, 0, 327685, 524293, 0, 5, 524313, 0, 65536, 524314, 0, 65537, 524315, 0, 65537, 524316, 0, 65537, 524317, 0, 65537, 524318, 0, 65537, 524319, 0, 65537, 524320, 0, 65537, 524321, 0, 65538, 655359, 0, 65536, 589824, 0, 65538, 589829, 0, 131075, 589830, 0, 5, 589849, 0, 65536, 589850, 0, 65537, 589851, 0, 65537, 589852, 0, 65537, 589853, 0, 65537, 589854, 0, 65537, 589855, 0, 65537, 589856, 0, 65537, 589857, 0, 65538, 720895, 0, 65536, 655360, 0, 65538, 655366, 0, 131075, 655367, 0, 327687, 655385, 0, 65536, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65537, 655390, 0, 65537, 655391, 0, 65537, 655392, 0, 65537, 655393, 0, 65538, 786431, 0, 65536, 720896, 0, 65538, 720904, 0, 327685, 720905, 0, 327687, 720921, 0, 65536, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65537, 720926, 0, 65537, 720927, 0, 65537, 720928, 0, 65537, 720929, 0, 65538, 851967, 0, 65536, 786432, 0, 65538, 786442, 0, 327685, 786443, 0, 131076, 786444, 0, 5, 786457, 0, 65536, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 786462, 0, 65537, 786463, 0, 65537, 786464, 0, 65537, 786465, 0, 65538, 917503, 0, 65536, 851968, 0, 65538, 851980, 0, 131075, 851981, 0, 5, 851993, 0, 65536, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65537, 851998, 0, 65537, 851999, 0, 65537, 852000, 0, 65537, 852001, 0, 65538, 983039, 0, 65536, 917504, 0, 65538, 917517, 0, 131075, 917518, 0, 131076, 917519, 0, 5, 917529, 0, 65536, 917530, 0, 65537, 917531, 0, 65537, 917532, 0, 65537, 917533, 0, 65537, 917534, 0, 65537, 917535, 0, 65537, 917536, 0, 65537, 917537, 0, 65538, 1048575, 0, 65536, 983040, 0, 65538, 983055, 0, 131075, 983056, 0, 5, 983065, 0, 65536, 983066, 0, 65537, 983067, 0, 65537, 983068, 0, 65537, 983069, 0, 65537, 983070, 0, 65537, 983071, 0, 65537, 983072, 0, 65537, 983073, 0, 65538, 1114111, 0, 65536, 1048576, 0, 65538, 1048592, 0, 131075, 1048593, 0, 327687, 1048601, 0, 65536, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65537, 1048607, 0, 65537, 1048608, 0, 65537, 1048609, 0, 65538, 1179647, 0, 65536, 1114112, 0, 65538, 1114130, 0, 327685, 1114131, 0, 5, 1114137, 0, 65536, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65538, 1245183, 0, 65536, 1179648, 0, 65538, 1179667, 0, 131075, 1179668, 0, 5, 1179673, 0, 65536, 1179674, 0, 65537, 1179675, 0, 65537, 1179676, 0, 65537, 1179677, 0, 65537, 1179678, 0, 65537, 1179679, 0, 65537, 1179680, 0, 65537, 1179681, 0, 65538, 1310719, 0, 65536, 1245184, 0, 65538, 1245204, 0, 131075, 1245205, 0, 4, 1245206, 0, 327687, 1245209, 0, 65536, 1245210, 0, 65537, 1245211, 0, 65537, 1245212, 0, 65537, 1245213, 0, 65537, 1245214, 0, 65537, 1245215, 0, 65537, 1245216, 0, 65537, 1245217, 0, 65538, 1376255, 0, 65536, 1310720, 0, 65538, 1310745, 0, 65536, 1310746, 0, 65537, 1310747, 0, 65537, 1310748, 0, 65537, 1310749, 0, 65537, 1310750, 0, 65537, 1310751, 0, 65537, 1310752, 0, 65537, 1310753, 0, 65538, 1441791, 0, 65536, 1376256, 0, 65538, 1376280, 0, 0, 1376281, 0, 262145, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65538, 1507327, 0, 65536, 1441792, 0, 65538, 1441816, 0, 65536, 1441817, 0, 65537, 1441818, 0, 65537, 1441819, 0, 65537, 1441820, 0, 65537, 1441821, 0, 65537, 1441822, 0, 65537, 1441823, 0, 65537, 1441824, 0, 65537, 1441825, 0, 65538, 1572863, 0, 65536, 1507328, 0, 65538, 1507348, 0, 327685, 1507349, 0, 4, 1507350, 0, 131076, 1507351, 0, 4, 1507352, 0, 131073, 1507353, 0, 65537, 1507354, 0, 65537, 1507355, 0, 65537, 1507356, 0, 65537, 1507357, 0, 65537, 1507358, 0, 65537, 1507359, 0, 65537, 1507360, 0, 65537, 1507361, 0, 65538, 1638399, 0, 65536, 1572864, 0, 65538, 1572881, 0, 262150, 1572889, 0, 65536, 1572890, 0, 65537, 1572891, 0, 65537, 1572892, 0, 65537, 1572893, 0, 65537, 1572894, 0, 65537, 1572895, 0, 65537, 1572896, 0, 65537, 1572897, 0, 65538, 1703935, 0, 65536, 1638400, 0, 65538, 1638417, 0, 65539, 1638425, 0, 65536, 1638426, 0, 65537, 1638427, 0, 65537, 1638428, 0, 65537, 1638429, 0, 65537, 1638430, 0, 65537, 1638431, 0, 65537, 1638432, 0, 65537, 1638433, 0, 65538, 1769471, 0, 65536, 1703936, 0, 65538, 1703953, 0, 131075, 1703954, 0, 4, 1703955, 0, 131076, 1703956, 0, 327687, 1703961, 0, 65536, 1703962, 0, 65537, 1703963, 0, 65537, 1703964, 0, 65537, 1703965, 0, 65537, 1703966, 0, 65537, 1703967, 0, 65537, 1703968, 0, 65537, 1703969, 0, 65538, 1835007, 0, 65536, 1769472, 0, 65538, 1769497, 0, 65536, 1769498, 0, 65537, 1769499, 0, 65537, 1769500, 0, 65537, 1769501, 0, 65537, 1769502, 0, 65537, 1769503, 0, 65537, 1769504, 0, 65537, 1769505, 0, 65538, 1900543, 0, 65536, 1835008, 0, 65538, 1835032, 0, 0, 1835033, 0, 65537, 1835034, 0, 65537, 1835035, 0, 65537, 1835036, 0, 65537, 1835037, 0, 65537, 1835038, 0, 65537, 1835039, 0, 65537, 1835040, 0, 65537, 1835041, 0, 65538, 1966079, 0, 65536, 1900544, 0, 65537, 1900545, 0, 1, 1900546, 0, 1, 1900547, 0, 1, 1900548, 0, 1, 1900549, 0, 1, 1900550, 0, 1, 1900551, 0, 1, 1900552, 0, 1, 1900553, 0, 1, 1900554, 0, 1, 1900555, 0, 1, 1900556, 0, 1, 1900557, 0, 1, 1900558, 0, 1, 1900559, 0, 1, 1900560, 0, 1, 1900561, 0, 1, 1900562, 0, 1, 1900563, 0, 1, 1900564, 0, 1, 1900565, 0, 1, 1900566, 0, 1, 1900567, 0, 1, 1900568, 0, 65537, 1900569, 0, 65537, 1900570, 0, 65537, 1900571, 0, 65537, 1900572, 0, 65537, 1900573, 0, 65537, 1900574, 0, 65537, 1900575, 0, 65537, 1900576, 0, 65537, 1900577, 0, 65538, 2031615, 0, 65536, 1966080, 0, 65537, 1966081, 0, 65537, 1966082, 0, 65537, 1966083, 0, 65537, 1966084, 0, 65537, 1966085, 0, 65537, 1966086, 0, 65537, 1966087, 0, 65537, 1966088, 0, 65537, 1966089, 0, 65537, 1966090, 0, 65537, 1966091, 0, 65537, 1966092, 0, 65537, 1966093, 0, 65537, 1966094, 0, 65537, 1966095, 0, 65537, 1966096, 0, 65537, 1966097, 0, 65537, 1966098, 0, 65537, 1966099, 0, 65537, 1966100, 0, 65537, 1966101, 0, 65537, 1966102, 0, 65537, 1966103, 0, 65537, 1966104, 0, 65537, 1966105, 0, 65537, 1966106, 0, 65537, 1966107, 0, 65537, 1966108, 0, 65537, 1966109, 0, 65537, 1966110, 0, 65537, 1966111, 0, 65537, 1966112, 0, 65537, 1966113, 0, 65538, 2097151, 0, 65536, 2031616, 0, 65537, 2031617, 0, 65537, 2031618, 0, 65537, 2031619, 0, 65537, 2031620, 0, 65537, 2031621, 0, 65537, 2031622, 0, 65537, 2031623, 0, 65537, 2031624, 0, 65537, 2031625, 0, 65537, 2031626, 0, 65537, 2031627, 0, 65537, 2031628, 0, 65537, 2031629, 0, 65537, 2031630, 0, 65537, 2031631, 0, 65537, 2031632, 0, 65537, 2031633, 0, 65537, 2031634, 0, 65537, 2031635, 0, 65537, 2031636, 0, 65537, 2031637, 0, 65537, 2031638, 0, 65537, 2031639, 0, 65537, 2031640, 0, 65537, 2031641, 0, 65537, 2031642, 0, 65537, 2031643, 0, 65537, 2031644, 0, 65537, 2031645, 0, 65537, 2031646, 0, 65537, 2031647, 0, 65537, 2031648, 0, 65537, 2031649, 0, 65538, 2162687, 0, 131072, 2097152, 0, 131073, 2097153, 0, 131073, 2097154, 0, 131073, 2097155, 0, 131073, 2097156, 0, 131073, 2097157, 0, 131073, 2097158, 0, 131073, 2097159, 0, 131073, 2097160, 0, 131073, 2097161, 0, 131073, 2097162, 0, 131073, 2097163, 0, 131073, 2097164, 0, 131073, 2097165, 0, 131073, 2097166, 0, 131073, 2097167, 0, 131073, 2097168, 0, 131073, 2097169, 0, 131073, 2097170, 0, 131073, 2097171, 0, 131073, 2097172, 0, 131073, 2097173, 0, 131073, 2097174, 0, 131073, 2097175, 0, 131073, 2097176, 0, 131073, 2097177, 0, 131073, 2097178, 0, 131073, 2097179, 0, 131073, 2097180, 0, 131073, 2097181, 0, 131073, 2097182, 0, 131073, 2097183, 0, 131073, 2097184, 0, 131073, 2097185, 0, 131074 )

[node name="Player" parent="GameWrapper" instance=ExtResource( 7 )]
position = Vector2( 232, 456 )

[node name="InputScrambleTimer" type="Timer" parent="GameWrapper"]
wait_time = 10.0
autostart = true

[node name="PauseMenuLayer" type="CanvasLayer" parent="."]

[node name="WorldPauseMenu" type="CenterContainer" parent="PauseMenuLayer"]
visible = false
margin_right = 256.0
margin_bottom = 150.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="PauseMenuLayer/WorldPauseMenu"]
margin_left = 38.0
margin_top = 26.0
margin_right = 218.0
margin_bottom = 126.0
size_flags_horizontal = 3
texture = ExtResource( 6 )

[node name="PauseOptionContainer" parent="PauseMenuLayer/WorldPauseMenu" instance=ExtResource( 4 )]
margin_left = 19.0
margin_top = 0.0
margin_right = 236.0
margin_bottom = 153.0
title = "Game paused     "
visible_option_count = 4
WRAP_TYPE = 1
options = PoolStringArray( "Continue", "Save", "Main menu" )

[node name="SaveOptionContainer" parent="PauseMenuLayer/WorldPauseMenu" instance=ExtResource( 4 )]
visible = false
margin_left = -38.0
margin_top = 0.0
margin_right = 294.0
margin_bottom = 153.0
title = "Save game                  "
visible_option_count = 4
WRAP_TYPE = 1
options = PoolStringArray( "Continue", "Main menu" )

[node name="HudLayer" type="CanvasLayer" parent="."]
pause_mode = 1

[node name="Hud" parent="HudLayer" instance=ExtResource( 9 )]
[connection signal="active_timer_changed" from="." to="HudLayer/Hud" method="_on_World_active_timer_changed"]
[connection signal="timeout" from="GameWrapper/InputScrambleTimer" to="." method="_on_InputScrambleTimer_timeout"]
[connection signal="option_selected" from="PauseMenuLayer/WorldPauseMenu/PauseOptionContainer" to="." method="_on_PauseOptionContainer_option_selected"]
[connection signal="option_selected" from="PauseMenuLayer/WorldPauseMenu/SaveOptionContainer" to="." method="_on_SaveOptionContainer_option_selected"]
